Fix and add new js markup

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <button type="reset" class="btn btn-reset">Delete</button>
         </div>
       </form>
-      <ul class="list"></ul>
+      <ol class="list"></ol>
     </div>
     <script src="./js/main.js"></script>
   </body>
